#25 fix: fix the overflow issue of mobile search from

--- a/source/css/_commons/header.styl
+++ b/source/css/_commons/header.styl
@@ -94,8 +94,7 @@ $nav-link
     opacity: 1
     right: 1rem
   @media mq-mobile
-    width: 100%
-    right: -100%
+    width: 90%
 
 .search-form
   position: absolute
